# publickipbitan

./: GITHUB_PYPI_TRUSTED_PUBLISHER_GUIDE_BN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/publickipbitan/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
