[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "publickipbitan"
version = "1.0.0"
description = "A simple Python library and CLI tool to show your public internet IP address."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Bitan Bhattachirjee", email = "mr.bitanbhattachirjee@gmail.com" }
]
keywords = ["public ip", "internet ip", "ip address", "network", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Networking"
]

[project.urls]
Homepage = "https://github.com/techbitan/publickipbitan"
Source = "https://github.com/techbitan/publickipbitan"
Issues = "https://github.com/techbitan/publickipbitan/issues"

[project.scripts]
publickipbitan = "publickipbitan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
